# SICAssembler

./: .gitignore  Calculate.py  GenCards.py  Process.py  README.md  Read.py  Write.py  main.py  opCodeFormat.json  pyproject.toml  sicXEOpCode.json  test.Regex.py
utils/: genJson.py
