[tool.poetry]
name = "SICXEAssembler"
version = "0.0.1"
description = "A homework for class \"System Program\""
authors = ["Nesquate <nesquate.100001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
